folder hw6a added

--- a/homework_6/index.html
+++ b/homework_6/index.html
@@ -11,24 +11,20 @@
 	<body>
 
 		<!-- begin webpage navigation bar -->
-
 		<div class="heading">
 			<div class="header-content">
 
 				<!-- webpage logo in navigation bar -->
-
 				<button class="homebutton">
 					<img src="plogo.png" alt="Pillow Logo" width="45" height="40" style="padding-left:20px; display: inline-block"> 
 				</button>
 
 				<!-- webpage name in navigation bar -->
-
 				<div class="name">
 					Fluff Stuff
 				</div>
 
 				<!-- left-side webpage content in navigation bar -->
-
 				<div class="navbar">
 					<div class="shop">
 						<a href="index2pp.html">shop</a>
@@ -43,30 +39,27 @@
 				</div>
 
 				<!-- search option in navigation bar -->
-
 				<div class="search">
 					<input placeholder="search" type="text" name="search">
 				</div>
 
 				<!-- user profile and cart content in navigation bar-->
-
 				<div class="profilebar">
 					<button class="profile">
 						<img class="profilebutton" src="profile.png" alt="Profile" width="20" height="19">
 					</button>
 
-					<button class="cart">
+					<div class="cart">
 						<img class="cartbutton" src="icon.png" alt="Cart" width="15" height="17">
 						<a href="index4cart.html">Cart</a>
 						<input type="button" class="counter" value="0"/>
-					</button>
+					</div>
 				</div>	
 
 			</div>
 		</div>
 
 		<!-- begin home page main content -->
-
 		<div class="bodytext">
 			<div class = "adtitle">
 				<p><span style="color:#5A5A5A;font-size:28px">Spring Collection: New Styles</span></p>
@@ -74,7 +67,6 @@
 			</div>
 
 			<!-- home page main content image -->
-			
 			<div class="springp">
        		<img src="imgad.png" alt="PillowSpring" width="490" height="350" style="padding-right:70px;display:inline-block;float:right">
        		</div>
@@ -89,13 +81,11 @@
        	</div>
 
        	<!-- begin recently viewed items -->
-
        	<div class="imglabel">
        		<p>Recently Viewed</p>
        	</div>
        		
        	<!-- recently viewed items images -->
-
        	<div class="imgtext">
        		<div class="row">
   				<div class="column">
